--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <title>Catálogo 3D</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestão de Produtos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Catálogo de Peças 3D</h1>
-    
-    <div id="viewer"></div>
-    <input type="file" id="upload" accept=".stl,.3mf">
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r153/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/examples/js/loaders/STLLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/examples/js/loaders/ThreeMFLoader.js"></script>
-    <script src="app.js"></script>
+  <h1>Gestão de Produtos 3D</h1>
+
+  <section id="form-section">
+    <h2>Criar/Editar Produto</h2>
+    <form id="productForm">
+      <input type="hidden" id="productId" />
+      <input type="text" id="name" placeholder="Nome do produto" required />
+      <input type="text" id="description" placeholder="Descrição" required />
+      <input type="number" step="0.01" id="price" placeholder="Preço" required />
+      <select id="material">
+        <option value="">Selecione o material</option>
+        <option value="1">PLA</option>
+        <option value="2">ABS</option>
+      </select>
+      <select id="color">
+        <option value="">Selecione a cor</option>
+        <option value="1">Vermelho</option>
+        <option value="2">Azul</option>
+      </select>
+      <button type="submit">Salvar Produto</button>
+      <button type="button" id="cancelEdit">Cancelar</button>
+    </form>
+  </section>
+
+  <section id="list-section">
+    <h2>Produtos</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Nome</th>
+          <th>Descrição</th>
+          <th>Preço</th>
+          <th>Material</th>
+          <th>Cor</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody id="productTableBody"></tbody>
+    </table>
+  </section>
+
+  <script src="app.js"></script>
 </body>
 </html>
