--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestão de Produtos</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gestão de Produtos 3D</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <h1>Gestão de Produtos 3D</h1>
 
   <section id="form-section">
-    <h2>Criar/Editar Produto</h2>
+    <h2>Criar / Editar Produto</h2>
+
     <form id="productForm">
       <input type="hidden" id="productId" />
-      <input type="text" id="name" placeholder="Nome do produto" required />
-      <input type="text" id="description" placeholder="Descrição" required />
-      <input type="number" step="0.01" id="price" placeholder="Preço" required />
+
+      <input
+        type="text"
+        id="name"
+        placeholder="Nome do produto"
+        required
+      />
+
+      <input
+        type="text"
+        id="description"
+        placeholder="Descrição"
+        required
+      />
+
+      <input
+        type="number"
+        step="0.01"
+        id="price"
+        placeholder="Preço"
+        required
+      />
+
       <select id="material">
         <option value="">Selecione o material</option>
-        <option value="1">PLA</option>
-        <option value="2">ABS</option>
       </select>
+
       <select id="color">
         <option value="">Selecione a cor</option>
-        <option value="1">Vermelho</option>
-        <option value="2">Azul</option>
       </select>
+
       <button type="submit">Salvar Produto</button>
       <button type="button" id="cancelEdit">Cancelar</button>
     </form>
@@ -33,7 +53,8 @@
 
   <section id="list-section">
     <h2>Produtos</h2>
-    <table>
+
+    <table border="1" cellpadding="8">
       <thead>
         <tr>
           <th>ID</th>
@@ -52,3 +73,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
