continuaçao de pagina forntal

--- a/Frontend/catalog/html/catalog.html
+++ b/Frontend/catalog/html/catalog.html
@@ -13,6 +13,6 @@
 
 <main id="catalog" class="catalog-grid"></main>
 
-<script src="app/catalog.js"></script>
+<script src="../scripts/catalog.js"></script>
 </body>
 </html>
