--- a/Frontend/PaginaFrontal/html/HomePage.html
+++ b/Frontend/PaginaFrontal/html/HomePage.html
@@ -9,11 +9,18 @@
 <body>
 
 <header class="header-container">
-  <!-- Logo + Navegação -->
   <div class="header-left">
-    <img src="logo.png" alt="XYZ Labs Logo">
-    
+    <!-- Logo -->
+    <div class="logo-container">
+      <svg class="logo" width="40" height="40" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="50" cy="50" r="45" fill="white"/>
+        <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle"
+              font-family="Segoe UI, sans-serif" font-size="24" fill="black">XYZ</text>
+      </svg>
+      <span class="logo-text">Labs</span>
+    </div>
 
+    <!-- Navegação -->
     <nav class="header-nav">
       <ul>
         <li><a href="products.html">Produtos</a></li>
@@ -25,47 +32,117 @@
     </nav>
   </div>
 
-  <!-- Área do usuário -->
   <div class="header-right">
-    <span class="user-area">Olá, Utilizador!</span>
-    <button onclick="location.href='/Frontend/userpages/html/login.html'">Login</button>
-    <button onclick="location.href='cart.html'">Carrinho</button>
+    <!-- Botões quando não logado -->
+    <div id="authButtons">
+      <button id="signInBtn">Sign In</button>
+      <button id="signUpBtn">Sign Up</button>
+    </div>
+
+    <!-- Ícones quando logado -->
+    <div id="userIcons" style="display:none">
+      <span id="userName"></span>
+      <button id="userMenuBtn" class="icon-btn">
+        <img src="/Frontend/user-alt-1-svgrepo-com.svg" alt="User" width="34" height="34">
+      </button>
+      <button id="cartBtn" class="icon-btn">
+        <img src="/Frontend/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho" width="34" height="34">
+      </button>
+    </div>
   </div>
 </header>
 
+<!-- Menu lateral (user/cart) -->
+<div id="sideMenu" class="side-menu">
+  <button class="closeBtn" id="closeMenu">×</button>
+  <div id="sideContent"></div>
+</div>
 
+<!-- HERO / BANNER -->
+<section class="hero">
+  <img src="/Frontend/images/examplebanner.jpg" alt="Hero Banner">
+  <h1>Crie o seu produto 3D personalizado</h1>
+  <p>Explore materiais, cores e designs únicos. Transforme a sua ideia em realidade!</p>
+  <button onclick="location.href='../../catalog/html/catalog.html'">Explorar Produtos</button>
+</section>
 
-  <!-- CONTEÚDO PRINCIPAL -->
-  <main>
-    <h1>Explore os nossos produtos 3D</h1>
-    <p>Na XYZ Labs, oferecemos uma vasta gama de produtos 3D personalizáveis. Navegue pelos produtos, explore os materiais e cores disponíveis e descubra as nossas soluções inovadoras.</p>
-
-    <!-- CONTAINER DE PRODUTOS -->
-    <div class="product-container">
-
-      <!-- PRODUCT CARD HARD-CODED -->
-      <div class="product-card">
-        <div class="product-images">
-          <img src="produto1-1.jpg" alt="Produto 1 - Imagem 1">
-          <img src="produto1-2.jpg" alt="Produto 1 - Imagem 2">
-          <img src="produto1-3.jpg" alt="Produto 1 - Imagem 3">
-        </div>
-        <div class="product-info">
-          <h3>Exemplo Produto 3D</h3>
-          <p>Material: PLA</p>
-          <p>Cor: Vermelho</p>
-          <p class="price">€25.00</p>
-          <button onclick="location.href='productPage.html'">Ver Produto</button>
-        </div>
-      </div>
-
+<!-- PRODUTOS EM DESTAQUE -->
+<section class="featured-products">
+  <h2>Produtos em Destaque</h2>
+  <div class="product-container">
+    <!-- Produto fictício -->
+    <div class="product-card">
+      <img src="/Frontend/images/exampleproduct.webp" alt="Produto 1">
+      <h3>Produto 3D A</h3>
+      <p>Material: PLA</p>
+      <p>Cor: Azul</p>
+      <p class="price">€30.00</p>
+      <button onclick="location.href='productPage.html'">Ver Produto</button>
     </div>
-  </main>
 
-  <!-- RODAPÉ -->
-  <footer>
-    &copy; 2026 XYZ Labs. Todos os direitos reservados. | <a href="homePage.html">Home</a>
-  </footer>
+    <div class="product-card">
+      <img src="/Frontend/images/exampleproduct.webp" alt="Produto 2">
+      <h3>Produto 3D B</h3>
+      <p>Material: ABS</p>
+      <p>Cor: Vermelho</p>
+      <p class="price">€45.00</p>
+      <button onclick="location.href='productPage.html'">Ver Produto</button>
+    </div>
 
+    <div class="product-card">
+      <img src="/Frontend/images/exampleproduct.webp" alt="Produto 3">
+      <h3>Produto 3D C</h3>
+      <p>Material: PETG</p>
+      <p>Cor: Preto</p>
+      <p class="price">€50.00</p>
+      <button onclick="location.href='productPage.html'">Ver Produto</button>
+    </div>
+  </div>
+</section>
+
+<!-- VANTAGENS / SERVIÇOS -->
+<section class="services">
+  <h2>Porquê escolher a XYZ Labs?</h2>
+  <div class="service-cards">
+    <div class="service-card">
+      <img src="icon-speed.png" alt="Rapidez">
+      <h3>Impressão Rápida</h3>
+      <p>Receba os seus produtos em tempo recorde.</p>
+    </div>
+    <div class="service-card">
+      <img src="icon-custom.png" alt="Personalização">
+      <h3>Personalização Total</h3>
+      <p>Escolha cores, materiais e design único.</p>
+    </div>
+    <div class="service-card">
+      <img src="icon-quality.png" alt="Qualidade">
+      <h3>Qualidade Premium</h3>
+      <p>Produtos duráveis e de alta precisão.</p>
+    </div>
+  </div>
+</section>
+
+<!-- NEWSLETTER -->
+<section class="newsletter">
+  <h2>Subscreva a nossa Newsletter</h2>
+  <p>Receba novidades, promoções e lançamentos 3D diretamente no seu email.</p>
+  <form id="newsletterForm">
+    <input type="email" placeholder="Digite o seu email" required>
+    <button type="submit">Subscrever</button>
+  </form>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>&copy; 2026 XYZ Labs. Todos os direitos reservados.</p>
+  <div class="footer-links">
+    <a href="homePage.html">Home</a>
+    <a href="products.html">Produtos</a>
+    <a href="about.html">Sobre</a>
+    <a href="contact.html">Contacto</a>
+  </div>
+</footer>
+
+<script src="../scripts/homePage.js"></script>
 </body>
 </html>
