--- a/Frontend/Dashboard/html/dashboard.html
+++ b/Frontend/Dashboard/html/dashboard.html
@@ -23,40 +23,183 @@
       <div id="usersList"></div>
     </section>
 
-    <!-- ABA DE PRODUTOS -->
-    <section id="products" class="tab hidden">
-      <h2>Gestão de Produtos</h2>
-      <button id="addProductBtn">+ Novo Produto</button>
-      <div id="productsList"></div>
-    </section>
-  </main>
+ <!-- ABA DE PRODUTOS -->
+<section id="products" class="tab hidden">
+  <h2>Gestão de Produtos</h2>
 
-  <!-- Modal para adicionar/editar produto (opcional por agora) -->
-  <!--
-  <div id="productModal" class="modal hidden">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h3 id="modalTitle">Novo Produto</h3>
-      <form id="productForm">
-        <input type="hidden" id="productId">
-        <label>Nome:</label>
-        <input type="text" id="productName" required>
-        <label>Preço (€):</label>
-        <input type="number" id="productPrice" step="0.01" required>
-        <label>Descrição:</label>
-        <textarea id="productDescription" required></textarea>
-        <label>Subcategoria ID:</label>
-        <input type="number" id="productSubcategory" required>
-        <label>Ficheiro .glb:</label>
-        <input type="file" id="productFile" accept=".glb">
-        <button type="submit">Salvar</button>
-      </form>
+  <!-- FILTROS + AÇÕES -->
+  <div class="products-toolbar">
+    <input
+      type="text"
+      id="productSearch"
+      placeholder="Pesquisar produto..."
+    />
+
+    <select id="productFilterActive">
+      <option value="">Todos</option>
+      <option value="true">Ativos</option>
+      <option value="false">Inativos</option>
+    </select>
+
+    <button id="addProductBtn" class="primary-btn">
+      + Novo Produto
+    </button>
+  </div>
+
+  <!-- LISTA / TABELA -->
+  <div class="products-table">
+    <div class="table-header">
+      <span>Nome</span>
+      <span>Preço</span>
+      <span>Stock</span>
+      <span>Estado</span>
+      <span>Ações</span>
+    </div>
+
+    <div id="productsList" class="table-body">
+      <!-- produtos renderizados via JS -->
     </div>
   </div>
-  -->
+
+  <!-- PAGINAÇÃO -->
+  <div class="pagination">
+    <button id="prevPage">←</button>
+    <span id="currentPage">1</span>
+    <button id="nextPage">→</button>
+  </div>
+</section>
+
+<!-- ================= MODAL: CRIAR PRODUTO ================= -->
+<div id="createProductModal" class="modal hidden">
+  <div class="modal-content">
+    <span class="close" data-close="create">&times;</span>
+
+    <h3>Novo Produto</h3>
+
+    <form id="createProductForm">
+      <div class="form-group">
+        <label>Nome</label>
+        <input type="text" id="createName" required>
+      </div>
+
+      <div class="form-group">
+        <label>Preço (€)</label>
+        <input type="number" id="createPrice" step="0.01" required>
+      </div>
+
+      <div class="form-group">
+        <label>Descrição</label>
+        <textarea id="createDescription" rows="4" required></textarea>
+      </div>
+
+        <div class="form-group">
+        <label>Categoria</label>
+        <select id="createCategory">
+            <option value="">-- Seleciona categoria --</option>
+        </select>
+        </div>
+
+        <div class="form-group">
+        <label>Subcategoria</label>
+        <select id="createSubcategory">
+            <option value="">-- Seleciona subcategoria --</option>
+        </select>
+        </div>
+
+
+
+      <div class="form-group">
+        <label>Stock</label>
+        <input type="number" id="createStock" min="0">
+      </div>
+
+      <div class="form-group">
+        <label>Ficheiro 3D (.glb)</label>
+        <input type="file" id="createFile" accept=".glb">
+      </div>
+
+      <button type="submit" class="primary-btn">
+        Criar Produto
+      </button>
+    </form>
+  </div>
+</div>
+
+<!-- ================= MODAL: EDITAR / ELIMINAR ================= -->
+<div id="editProductModal" class="modal hidden">
+  <div class="modal-content">
+    <span class="close" data-close="edit">&times;</span>
+
+    <h3>Editar Produto</h3>
+
+    <form id="editProductForm">
+      <input type="hidden" id="editId">
+
+      <div class="form-group">
+        <label>Nome</label>
+        <input type="text" id="editName" required>
+      </div>
+
+      <div class="form-group">
+        <label>Preço (€)</label>
+        <input type="number" id="editPrice" step="0.01" required>
+      </div>
+
+      <div class="form-group">
+        <label>Descrição</label>
+        <textarea id="editDescription" rows="4" required></textarea>
+      </div>
+
+   <div class="form-group">
+  <label>Categoria</label>
+  <select id="editCategory">
+    <option value="">-- Seleciona categoria --</option>
+  </select>
+</div>
+
+<div class="form-group">
+  <label>Subcategoria</label>
+  <select id="editSubcategory">
+    <option value="">-- Seleciona subcategoria --</option>
+  </select>
+</div>
+
+
+
+      <div class="form-group">
+        <label>Stock</label>
+        <input type="number" id="editStock" min="0">
+      </div>
+
+      <div class="form-group">
+        <label>Novo ficheiro 3D (.glb)</label>
+        <input type="file" id="editFile" accept=".glb">
+      </div>
+
+      <div class="modal-actions">
+        <button type="submit" class="primary-btn">
+          Guardar Alterações
+        </button>
+
+        <button type="button" id="deleteProductBtn" class="danger-btn">
+          Eliminar
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+  </main>
+
 
   <script src="../scripts/dashboard.js"></script>
   <script src="../scripts/users.js"></script>
   <script src="../scripts/products.js"></script>
+  <script src="../scripts/categories.js"></script>
+  <script src="../scripts/subcategories.js"></script>
+  <script src="../scripts/createproduct.js"></script>
+  <script src="../scripts/editproduct.js"></script>
+
 </body>
 </html>
