proteçao de rotas backend

--- a/Frontend/PaginaFrontal/html/HomePage.html
+++ b/Frontend/PaginaFrontal/html/HomePage.html
@@ -13,7 +13,7 @@
   <div class="header-left">
     <div class="logo-container">
       <a href="HomePage.html" class="logo-link">
-        <img src="/Frontend/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
+        <img src="/Frontend/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
       </a>
     </div>
 
@@ -40,7 +40,7 @@
     <!-- Search Bar -->
     <div class="header-search">
       <span class="search-icon">
-        <img src="/Frontend/search-svgrepo-com.svg" alt="pesquisar">
+        <img src="/Frontend/lib/icons/search-svgrepo-com.svg" alt="pesquisar">
       </span>
       <input type="text" placeholder="Pesquisar produtos..." id="searchInput">
     </div>
@@ -54,10 +54,10 @@
     <!-- Ícones quando logado -->
     <div id="userIcons" style="display:none">
       <button id="userMenuBtn" class="icon-btn" aria-label="Menu utilizador">
-        <img src="/Frontend/user-alt-1-svgrepo-com.svg" alt="Utilizador">
+        <img src="/Frontend/lib/icons/user-alt-1-svgrepo-com.svg" alt="Utilizador">
       </button>
       <button id="cartBtn" class="icon-btn cart-btn" aria-label="Carrinho">
-        <img src="/Frontend/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
+        <img src="/Frontend/lib/icons/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
         <span class="cart-badge" id="cartBadge">0</span>
       </button>
     </div>
@@ -75,7 +75,7 @@
 
 <!-- HERO / BANNER -->
 <section class="hero">
-  <img src="/Frontend/images/examplebanner.jpg" alt="Banner XYZ Labs">
+  <img src="/Frontend/lib/images/Banner.webp" alt="Banner XYZ Labs">
   <div class="hero-content">
     <h1>Crie o seu produto 3D personalizado</h1>
     <p>Explore materiais, cores e designs únicos. Transforme a sua ideia em realidade!</p>
