--- a/Frontend/PaginaFrontal/html/product-details.html
+++ b/Frontend/PaginaFrontal/html/product-details.html
@@ -84,17 +84,20 @@
 ========================= -->
 <main class="product-container">
 
-  <!-- GALERIA -->
+  <!-- GALERIA / SLIDE -->
   <section class="product-gallery">
     <div class="main-image">
-      <img id="productImg1" alt="Imagem principal">
-    </div>
+  <img id="slideImg" alt="Imagem do produto">
+  <button id="prevBtn" class="slide-btn prev">‹</button>
+  <button id="nextBtn" class="slide-btn next">›</button>
+</div>
 
-    <div class="product-images">
-      <img id="productImg1" alt="Imagem 1">
-      <img id="productImg2" alt="Imagem 2">
-      <img id="productImg3" alt="Imagem 3">
-      <img id="productImg4" alt="Imagem 4">
+
+    <div class="product-thumbnails">
+      <img id="thumb1" alt="Imagem 1">
+      <img id="thumb2" alt="Imagem 2">
+      <img id="thumb3" alt="Imagem 3">
+      <img id="thumb4" alt="Imagem 4">
     </div>
   </section>
 
@@ -115,6 +118,7 @@
   </section>
 
 </main>
+
 
 <!-- =========================
      FOOTER
