--- a/Frontend/PaginaFrontal/html/HomePage.html
+++ b/Frontend/PaginaFrontal/html/HomePage.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XYZ Labs - Homepage</title>
   <link rel="stylesheet" href="../css/HomePage.css">
+  <link rel="stylesheet" href="../css/Header.css">
 </head>
 <body>
 
