--- a/Frontend/PaginaFrontal/html/materials.html
+++ b/Frontend/PaginaFrontal/html/materials.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Materiais - XYZ Labs</title>
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/Header.css">
 </head>
 <body>
 
