--- a/Frontend/PaginaFrontal/html/product-details.html
+++ b/Frontend/PaginaFrontal/html/product-details.html
@@ -10,6 +10,7 @@
   
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/product-details.css">
+  <link rel="stylesheet" href="../css/Header.css">
 </head>
 <body>
 
