Trabalho sistema de login e registo

--- a/Frontend/PaginaFrontal/html/HomePage.html
+++ b/Frontend/PaginaFrontal/html/HomePage.html
@@ -55,6 +55,7 @@
     <!-- Botões quando não logado -->
     <div id="authButtons">
       <button id="signInBtn" class="btn-secondary">Sign In</button>
+      
       <button id="signUpBtn" class="btn-primary">Sign Up</button>
     </div>
 
@@ -92,7 +93,7 @@
         Explorar Produtos
       </button>
 
-      <button class="btn-hero secondary" onclick="location.href='create-product.html'">
+      <button class="btn-hero secondary" onclick="location.href='contact.html'">
         Começar a Criar
       </button>
     </div>
@@ -183,16 +184,16 @@
       <div class="footer-section">
         <h4>Suporte</h4>
         <ul>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Termos e Condições</a></li>
-          <li><a href="#">Política de Privacidade</a></li>
+          <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="TC.html">Termos e Condições</a></li>
+          <li><a href="Privacy.html">Política de Privacidade</a></li>
         </ul>
       </div>
 
       <div class="footer-section">
         <h4>Contacto</h4>
         <p>📧 info@xyzlabs.pt</p>
-        <p>📞 +351 XXX XXX XXX</p>
+        <p>📞 +351 935310984</p>
       </div>
     </div>
     
