--- a/Frontend/PaginaFrontal/html/about.html
+++ b/Frontend/PaginaFrontal/html/about.html
@@ -14,7 +14,7 @@
   <div class="header-left">
     <div class="logo-container">
       <a href="HomePage.html" class="logo-link">
-        <img src="/Frontend/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
+        <img src="/Frontend/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
       </a>
     </div>
 
@@ -256,6 +256,7 @@
   </div>
 </main>
 
+<!-- FOOTER -->
 <footer class="footer">
   <div class="container">
     <div class="footer-content">
@@ -275,9 +276,18 @@
       </div>
 
       <div class="footer-section">
+        <h4>Suporte</h4>
+        <ul>
+          <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="TC.html">Termos e Condições</a></li>
+          <li><a href="Privacy.html">Política de Privacidade</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
         <h4>Contacto</h4>
         <p>📧 info@xyzlabs.pt</p>
-        <p>📞 +351 XXX XXX XXX</p>
+        <p>📞 +351 935310984</p>
       </div>
     </div>
     
